<resources>
    <string name="app_name">Multicards</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_cardset_picker" translatable="false">CardsetPickerActivity</string>
    <string name="title_activity_gameover" translatable="false">GameOverActivity</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>

    <string-array name="tab_items_cardsetpicker">
        <item>Search</item>
        <item>Recent</item>
        <item>Favorites</item>
    </string-array>

    <string name="download_cardset_dialog_message">Downloading cardset</string>

    <string name="cardset_search_message">Enter keywords</string>
    <string name="string_starting_game">Starting game</string>
    <string name="string_inviting_opponent">Inviting opponent</string>
    <string name="string_accepting_invitation">Accepting invitation</string>
    <string name="string_waiting_opponent">Waiting opponent</string>
    <string name="string_opponent_busy">Opponent is not available</string>
    <string name="waiting_opponent_dialog_message">Searching for opponents</string>

    <string name="string_your_id">Your id is:</string>

    <string name="string_enter_opponent_nickname">Enter opponent nickname</string>

    <string name="string_choose_opponent">Choose opponent</string>
    <string name="string_choose_game">Choose game</string>
    <string name="string_random_opponent">Random opponent</string>
    <string-array name="dialog_items_multiplayer">
        <item>Random opponent</item>
        <item>Host game</item>
        <item>Join game</item>
    </string-array>

    <string-array name="dialog_multiplayer">
        <item>New game</item>
        <item>Join game</item>
    </string-array>

    <string name="string_invitation">invites you to play</string>
    <string name="button_play">Play now</string>

    <string name="string_ready_question">Are you ready?</string>
    <string name="string_ready">ready</string>

    <string name="button_like">Like cardset!</string>
    <string name="button_comment">Leave comment!</string>
    <string name="string_popular_cardsets">Popular cardsets</string>
    <string name="string_game_stopped">Game interrupted</string>

    <string name="string_main_menu_train">Train</string>
    <string name="string_main_menu_multiplayer">Multiplayer</string>
    <string name="string_main_menu_settings">Settings</string>

    <string name="alert_select_image">Pick avatar image</string>

    <string name="dialog_uploading_avatar">Uploading avatar</string>

    <string name="dialog_name_taken">The name is taken, please try another one</string>

    <string name="string_winner">Winner</string>

    <string name="string_winner_you">You win!</string>

    <string name="string_choose_tags">Pick tags</string>

    <string name="string_powered_by_quizlet" translatable="false">Powered by Quizlet</string>
    <string name="string_powered_by_quizlet_link" translatable="false">https://quizlet.com</string>

    <string name="string_score">Score</string>

    <string name="alert_new_version_available">New version is available. Would you like to update?</string>
    <string name="alert_update_required">You must update application to proceed. Would you like to update now?</string>

    <string name="string_ok">OK</string>
    <string name="string_cancel">Cancel</string>

    <string name="string_invert_cards">Invert title and description</string>

    <string name="string_poor_network">Poor network connectivity</string>

    <string name="string_empty_cardset">Sorry, cardset does not have enough words</string>

    <string name="string_answers">Your answers</string>
    <string name="string_new_words">New words learned</string>
    <string name="string_achievements">Аchievements</string>

    <string name="playMarketDetailsLink" translatable="false">market://details?id=</string>
    <string name="playMarketDetailsLinkAlt" translatable="false">https://play.google.com/store/apps/details?id=</string>

    <string name="string_downloading">Downloading...</string>

    <string name="string_game_invitation">Game invitation</string>
    <string name="string_play_now">Play now</string>
    <string name="string_play_later">Dismiss</string>

    <string name="aboutText">
    Multicards (c) 2016\n
    Alexey Boev\n
    Maxim Maximov\n
    Some components are licensed under Apache 2.0\n
    More details at www.github.com/aboev/multicards\n
    Flash cards provided by Quizlet</string>

    <string name="string_user_not_found">Player not found, please check username</string>

    <string name="string_played">Last played</string>
    <string name="string_author">Author:</string>
    <string name="string_total_cards">Cards in set:</string>

    <string-array name="dialog_flashcard_settings">
        <item>Flip flashcards</item>
        <item>Pronounciation on/off</item>
    </string-array>

    <string name="string_loading">Loading</string>

</resources>
