<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top">

    <TextView
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cardset_search_message"
        android:textSize="25dip"/>

    <EditText
        android:id="@+id/editTextCardSetPicker"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dip"/>

    <TextView
        android:id="@+id/textViewPopularCardsets"
        android:paddingTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_popular_cardsets"
        android:textSize="18dip"
        android:visibility="gone"/>

    <ListView
        android:id="@+id/listViewPopularCardsets"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
    </ListView>

    <ListView
        android:id="@+id/listViewCardSetPicker"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>

    <Button
        android:id="@+id/buttonCardSetPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OK"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/textViewPoweredByQuizlet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_powered_by_quizlet"
        android:textStyle="bold"
        android:textColor="#278ed7"
        android:gravity="center_horizontal"
        android:layout_gravity="bottom"/>

</LinearLayout>